...
            <List.Item
              title="New route"
              left={props => <List.Icon {...props} icon="plus" />}
              onPress={() => navigation.navigate('Home')}
            />
            <List.Item
              title="Statistics"
              left={props => <List.Icon {...props} icon="chart-line-variant" />}
              onPress={() => navigation.navigate('Statistics')}
            />
            <List.Item
              title="Options"
              left={props => <List.Icon {...props} icon="cog-outline"
...
